# foldergen2

./: FolderGen_CLI_Usage.md  pyproject.toml  readme.md
examples/: template_basic.json  template_basic2.json  vars_basic.json
src/foldergen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/foldergen/api/: generator_api.py  plan_api.py
src/foldergen/cli/: commands.cmd  main.py
src/foldergen/core/: checker.py  fs_ops.py  gen_syntax.py  models.py  parser.py  plan_builder.py  validator.py
